[tool.poetry]
name = "repl_python3_PAUL"
version = "0.1.0"
description = ""
authors = ["Clyde <clyde_mendacium@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
praw = "^7.3.0"
replit = "^3.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
